--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form>
             <label for="states">Please enter a state/states to see the National Parks located there:</label><br>
             <input type="text" value="" id="states" placeholder="Enter state(s) here" required>
-            <button type="submit">Go</button>
+            <input type="submit" value="Go"></input>
         </form>
         <section class="search-results"></section>
 
