Add search result format

--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
             </select>
             <input type="submit" id="submit-button" value="Go"></input>
         </div>
-        <section class="search-results"></section>
+        <section class="search-results">
+            <div class="result">
+                <h3><a class="park-link" href="https://www.nps.gov/yose/index.htm" target="_blank">Yosemite National Park, CA</a></h3>
+                <p>Yosemite National Park is in California’s Sierra Nevada mountains. It’s famed for its giant, ancient sequoia trees, and for Tunnel View, the iconic vista of towering Bridalveil Fall and the granite cliffs of El Capitan and Half Dome.</p>
+            </div>
+
+        </section>
+
 
     </main>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
