--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.default.css'>
     <script src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="button.css" />
     <link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
@@ -16,8 +17,8 @@
         <h1 class="title">National Parks Finder</h1>
     </header>
     <main>
-        <h2>Please enter a state/states to see the National Parks located there:</h2>
-        <div class="search-box">
+        <h2 class="instructions">Please enter a state/states to see the National Parks located there:</h2>
+        <div class="search-container">
             <select name="search-options" id="search" multiple="multiple">
                 <option value="AL">Alabama</option>
                 <option value="AK">Alaska</option>
@@ -83,20 +84,24 @@
                 <option value=40>40</option>
                 <option value=45>45</option>
                 <option value=50>50</option>
-                <option value=100000>All</option>
+                <option value=100>All</option>
             </select>
-            <input type="submit" id="submit-button" value="Go"></input>
         </div>
+        <button type="submit" id="submit-button" class="btn icon-arrow-right">GO</button>
         <section class="search-results">
             <h3 class="js-error-message error-message hidden"></h3>
-            <div class="result">
+            <!-- <article class="result">
                 <h3><a class="park-link" href="https://www.nps.gov/yose/index.htm" target="_blank">Yosemite National Park</a></h3>
                 <h4 class="park-state"><span class="park-state-title">STATE(S):</span> CA, NV, AL</h4>
-                <p class="park-description">Yosemite National Park is in California’s Sierra Nevada mountains. It’s famed for its giant, ancient sequoia trees, and for Tunnel View, the iconic vista of towering Bridalveil Fall and the granite cliffs of El Capitan and Half Dome.</p>
-                <a class="park-email" href="mailto:ailsamm@outlook.co.uk"><i class="icon fas fa-at"></i>EMAIL</a><a class="park-phone" href="tel:7157159904"><i class="icon fas fa-phone"></i>CALL</a>
-</div>
-            </div>
-
+                <section class="park-info" style="display:flex">
+                    <p class="park-description">Yosemite National Park is in California’s Sierra Nevada mountains. It’s famed for its giant, ancient sequoia trees, and for Tunnel View, the iconic vista of towering Bridalveil Fall and the granite cliffs of El Capitan and Half Dome.</p>
+                    <img class="park-image" src="https://www.nps.gov/common/uploads/structured_data/3C7A89F4-1DD8-B71B-0B52204A2EBF61A4.jpg" alt="something">
+                </section>
+                <section class="park-contact-info">
+                    <a class="park-email" href="mailto:ailsamm@outlook.co.uk"><i class="icon fas fa-at"></i>EMAIL</a>
+                    <a class="park-phone" href="tel:7157159904"><i class="icon fas fa-phone"></i>CALL</a>
+                </section>
+            </article> -->
         </section>
 
 
