--- a/index.html
+++ b/index.html
@@ -91,18 +91,19 @@
         </div>
         <section class="search-results">
             <h3 class="js-error-message error-message hidden"></h3>
-             <!-- <article class="result">
+             <article class="result">
                 <h3><a class="park-link" href="https://www.nps.gov/yose/index.htm" target="_blank">YOSEMITE NATIONAL PARK</a></h3>
-                <h4 class="park-state"><span class="park-state-title">STATE(S):</span> CA, NV, AL</h4>
+                <h4 class="park-state"><span class="park-title">STATE(S):</span> CA, NV, AL</h4>
                 <section class="park-info" style="display:flex">
                     <p class="park-description">Yosemite National Park is in California’s Sierra Nevada mountains. It’s famed for its giant, ancient sequoia trees, and for Tunnel View, the iconic vista of towering Bridalveil Fall and the granite cliffs of El Capitan and Half Dome.</p>
                     <img class="park-image" src="https://www.nps.gov/common/uploads/structured_data/3C7A89F4-1DD8-B71B-0B52204A2EBF61A4.jpg" alt="something">
                 </section>
+                <p><span class="park-title">ADDRESS:</span> 1111 Yosemite Way. Yosemite National Park. California.</p>
                 <section class="park-contact-info">
                     <a class="park-email" href="mailto:ailsamm@outlook.co.uk"><i class="icon fas fa-at"></i>EMAIL</a>
                     <a class="park-phone" href="tel:7157159904"><i class="icon fas fa-phone"></i>CALL</a>
                 </section>
-            </article> -->
+            </article>
         </section>
 
 
