Comment sample result

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <section class="search-results">
             <h3 class="js-error-message error-message hidden"></h3>
-             <article class="result">
+             <!-- <article class="result">
                 <h3><a class="park-link" href="https://www.nps.gov/yose/index.htm" target="_blank">YOSEMITE NATIONAL PARK</a></h3>
                 <h4 class="park-state"><span class="park-title">STATE(S):</span> CA, NV, AL</h4>
                 <section class="park-info" style="display:flex">
@@ -103,7 +103,7 @@
                     <a class="park-email" href="mailto:ailsamm@outlook.co.uk"><i class="icon fas fa-at"></i>EMAIL</a>
                     <a class="park-phone" href="tel:7157159904"><i class="icon fas fa-phone"></i>CALL</a>
                 </section>
-            </article>
+            </article> -->
         </section>
 
 
